# web-toolbox

./: .gitignore  README.md  _headers  bg-remove.html  bridge.js  build-agent.bat  index.html  out.html  package.json  serve.js  start-agent.bat  starter.js  style.css  video-edit.html  web-toolbox.code-workspace  wrangler.jsonc  youtube.html
@source/img_slide/: main.js  package.json  preload.js
@source/img_slide/src/renderer/: index.html  renderer.js  styles.css
@source/img_slide/src/settings/: settings.css  settings.html  settings.js
@source/img_slide_tauri/: .gitignore  all_perms.txt  build_error.txt  package-lock.json  package.json
@source/img_slide_tauri/src/: index.html  main.js  style.css
@source/img_slide_tauri/src-tauri/: Cargo.toml  run_log.txt  tauri.conf.json
@source/img_slide_tauri/src-tauri/capabilities/: default.json
@source/img_slide_tauri/src-tauri/icons/: icon.icns
@source/img_slide_tauri/src-tauri/permissions/: custom.json
@source/img_slide_tauri/src-tauri/src/: lib.rs
docs/: PROJECT_RULES.md  architecture_v2.md  design_system_stitch.md  implementation_plan.md  project_vision.md  walkthrough.md
projects/st-starter/: build-starter.bat  starter.cs
projects/yt-agent/: package.json  youtube.js
video-editor/js/: editor.js
web/assets/css/: style.css
web/assets/js/: coi-serviceworker.js  layout.js  video-edit.js
web/assets/video-editor/js/: editor.js
web/components/: sidebar.html
web/pages/: bg-remove.html  img-slider.html  video-edit.html  youtube.html  youtube_debug.txt  youtube_utf8.html
